--- a/webapp/backend/app/templates/information.html
+++ b/webapp/backend/app/templates/information.html
@@ -79,77 +79,18 @@
                             <a href="#" class="card-link">志愿者详情</a>
                         </div>
                     </div>
-                    <button type="button" class="btn btn-success">同意申请</button>
-                    <button type="button" class="btn btn-danger">拒绝申请</button>
-                    <button type="button" class="btn btn-info">回复</button>
+                    <button type="button" class="btn btn-success">同意</button>
+                    <button type="button" class="btn btn-danger">拒绝</button>
                 </div>
 
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
-                    <button type="button" class="btn btn-primary">确认</button>
                 </div>
             </div>
         </div>
     </div>
     {% endfor %}
     {% endfor %}
-    <!--div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">消息详情</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-
-                <div class="modal-body">
-                    <div class="card" style="width: 45rem;">
-                        <div class="card-body">
-                            <h5 class="card-title">项目：校园志愿讲解</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">消息时间：2019.11.20 19:56</h6>
-
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th scope="col">申请项目</th>
-                                        <th scope="col">申请职位</th>
-                                        <th scope="col">申请日期</th>
-                                        <th scope="col">姓名</th>
-                                        <th scope="col">学号</th>
-                                        <th scope="col">院系</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr class="table-success">
-                                        <th scope="row">校园志愿讲解</th>
-                                        <td>流动志愿者</td>
-                                        <td>2019.11.20</td>
-                                        <td>王俊凯</td>
-                                        <td>201919991999</td>
-                                        <td>软件学院</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-
-                            <p class="card-text">申请理由：我爱志愿，我真的很爱志愿，希望你们可以收留我这个可怜的孩子嘤嘤嘤。</p>
-                            <a href="#" class="card-link">志愿者详情</a>
-                        </div>
-                    </div>
-                    <button type="button" class="btn btn-success">同意申请</button>
-                    <button type="button" class="btn btn-danger">拒绝申请</button>
-                    <button type="button" class="btn btn-info">回复</button>
-                </div>
-
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
-                    <button type="button" class="btn btn-primary">确认</button>
-                </div>
-            </div>
-        </div>
-    </div-->
-
     <div class="container-fluid">
         <div class="tab-content">
             <ul class="nav nav-tabs" id="myTab" role="tablist" style="padding-left: 10px;">
@@ -206,55 +147,6 @@
                                     </tr>
                                     {% endfor %}
                                     {% endfor %}
-                                    <!--tr class="table-success" style="cursor:pointer;"
-                                        onclick="$('#exampleModal').modal('toggle')">
-                                        <th scope="row">志愿申请</th>
-                                        <td>志愿者</td>
-                                        <td>特朗普</td>
-                                        <td>校园志愿讲解</td>
-                                        <td>2019.11.20 12:36</td>
-                                        <td>未读</td>
-                                        <td>回复</td>
-                                    </tr>
-                                    <tr class="table-primary" style="cursor:pointer;"
-                                        onclick="$('#exampleModal').modal('toggle')">
-                                        <th scope="row">志愿者留言</th>
-                                        <td>志愿者</td>
-                                        <td>希拉里</td>
-                                        <td>校园志愿讲解</td>
-                                        <td>2019.11.20 22:36</td>
-                                        <td>未读</td>
-                                        <td>回复</td>
-                                    </tr>
-                                    <tr class="table-danger" style="cursor:pointer;"
-                                        onclick="$('#exampleModal').modal('toggle')">
-                                        <th scope="row">管理员消息</th>
-                                        <td>管理员</td>
-                                        <td>清华大学团委志愿组</td>
-                                        <td>校园志愿讲解</td>
-                                        <td>2019.11.20 12:36</td>
-                                        <td>未读</td>
-                                        <td>回复</td>
-                                    </tr>
-
-                                    <tr style="cursor:pointer;" onclick="$('#exampleModal').modal('toggle')">
-                                        <th scope="row">志愿申请</th>
-                                        <td>志愿者</td>
-                                        <td>马克思</td>
-                                        <td>校园志愿讲解</td>
-                                        <td>2019.11.20 22:36</td>
-                                        <td>已读</td>
-                                        <td>回复</td>
-                                    </tr>
-                                    <tr style="cursor:pointer;" onclick="$('#exampleModal').modal('toggle')">
-                                        <th scope="row">志愿者留言</th>
-                                        <td>志愿者</td>
-                                        <td>恩格斯</td>
-                                        <td>校园志愿讲解</td>
-                                        <td>2019.11.20 22:36</td>
-                                        <td>已读</td>
-                                        <td>回复</td>
-                                    </tr-->
                                 </tbody>
                             </table>
                         </div>
@@ -297,35 +189,6 @@
                                     </tr>
                                     {% endfor %}
                                     {% endfor %}
-                                    <!--tr class="table-success" style="cursor:pointer;"
-                                        onclick="$('#exampleModal').modal('toggle')">
-                                        <th scope="row">志愿申请</th>
-                                        <td>志愿者</td>
-                                        <td>奥巴马</td>
-                                        <td>校园志愿讲解</td>
-                                        <td>2019.11.20 22:36</td>
-                                        <td>未读</td>
-                                        <td>回复</td>
-                                    </tr>
-                                    <tr class="table-success" style="cursor:pointer;"
-                                        onclick="$('#exampleModal').modal('toggle')">
-                                        <th scope="row">志愿申请</th>
-                                        <td>志愿者</td>
-                                        <td>特朗普</td>
-                                        <td>校园志愿讲解</td>
-                                        <td>2019.11.20 12:36</td>
-                                        <td>未读</td>
-                                        <td>回复</td>
-                                    </tr>
-                                    <tr style="cursor:pointer;" onclick="$('#exampleModal').modal('toggle')">
-                                        <th scope="row">志愿申请</th>
-                                        <td>志愿者</td>
-                                        <td>马克思</td>
-                                        <td>校园志愿讲解</td>
-                                        <td>2019.11.20 22:36</td>
-                                        <td>已读</td>
-                                        <td>回复</td>
-                                </tr-->
                                 </tbody>
                             </table>
                         </div>
@@ -354,27 +217,6 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <!--其余消息，待开发-->
-                                    <!--tr class="table-primary" style="cursor:pointer;"
-                                        onclick="$('#exampleModal').modal('toggle')">
-                                        <th scope="row">志愿者留言</th>
-                                        <td>志愿者</td>
-                                        <td>希拉里</td>
-                                        <td>校园志愿讲解</td>
-                                        <td>2019.11.20 22:36</td>
-                                        <td>未读</td>
-                                        <td>回复</td>
-                                    </tr>
-                                    <tr style="cursor:pointer;" onclick="$('#exampleModal').modal('toggle')">
-                                        <th scope="row">志愿者留言</th>
-                                        <td>志愿者</td>
-                                        <td>恩格斯</td>
-                                        <td>校园志愿讲解</td>
-                                        <td>2019.11.20 22:36</td>
-                                        <td>已读</td>
-                                        <td>回复</td>
-                                    </tr-->
-
                                 </tbody>
                             </table>
                         </div>
@@ -403,17 +245,6 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <!--其余消息，待开发-->
-                                    <!--tr class="table-danger" style="cursor:pointer;"
-                                        onclick="$('#exampleModal').modal('toggle')">
-                                        <th scope="row">管理员消息</th>
-                                        <td>管理员</td>
-                                        <td>清华大学团委志愿者</td>
-                                        <td>校园志愿讲解</td>
-                                        <td>2019.11.20 12:36</td>
-                                        <td>未读</td>
-                                        <td>回复</td>
-                                    </tr-->
 
                                 </tbody>
                             </table>
@@ -454,7 +285,10 @@
     <!-- End footer -->
     <!-- ============================================================== -->
 </div>
+{% endblock %}
 
+{% block script %}
+{{super()}}
 <script type="text/javascript" src="../static/js/bootstrap-datetimepicker.js" charset="UTF-8"></script>
     <script type="text/javascript" src="../static/js/bootstrap-datetimepicker.zh-CN.js" charset="UTF-8"></script>
     <script type="text/javascript">
@@ -492,63 +326,6 @@
 </script>
 
 <script>
-    var url = '';
-    $("#uploadImage").fileupload({
-        url : ROOT + "/security/company/uploadFile",
-        dataType : 'json',
-        autoUpload : false,
-        acceptFileTypes : /(gif|jpe?g|png)$/i,
-        maxFileSize : 1000000, // 1 MB
-        imageMaxWidth : 100,
-        imageMaxHeight : 100,
-        messages : {
-            acceptFileTypes : '文件类型不匹配',
-            maxFileSize : '文件过大',
-            minFileSize : '文件过小'
-        }
-    }).on("fileuploadadd", function(e, data) {
-        // 当文件添加上去时候调用
-        $("#titleImageError")("");
-        data.submit()
-    }).on("fileuploaddone", function(e, data) {
-        // 上传完成时调用
-        if (data.result.returnState == "ERROR") {
-            alert("上传失败")
-            return;
-        }
-        url = data.result.returnData.url;
-    });
-    
-    function updateMsg() {
-        $.ajax({
-            url : ROOT + "/security/company/updateInfo",
-            data : {
-                id : $("#companyId").val(),
-                image : url,
-                companyName : $("#companyName").val(),
-                companySite : $("#companySite").val(),
-                companyLinker : $("#companyLinker").val(),
-                companyTel : $("#companyTel").val()
-            },
-            type : "post",
-            success : function(data) {
-                if (data.returnState == "OK") {
-                    layer.msg('操作成功', {
-                        icon : 6,
-                        shade : 0.01,
-                        offset : [ '57px', '1100px' ]
-                    });
-                    $table.bootstrapTable('refresh');
-                } else {
-                    layer.msg('操作失败', {
-                        icon : 5,
-                        shade : 0.01,
-                        offset : [ '90px', '900px' ]
-                    });
-                }
-            }
-        });
-    }
 </script>
 {% endblock %}
 
